# CursovaOOP2025

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/imu_tracker/: KalmanFilter.h  Navigation.h  Quaternion.h  Vector.h
core/src/: KalmanFilter.cpp  Navigation.cpp  Quaternion.cpp  Vector.cpp  bindings.cpp
python/: README.md  app.py  data_loader.py  main.py  visualizer.py
